RESOLVED FIXED220669
(REGRESSION) Playback pauses upon entering PiP via media controls on trailers.apple.com
https://bugs.webkit.org/show_bug.cgi?id=220669
Summary (REGRESSION) Playback pauses upon entering PiP via media controls on trailers...
Peng Liu
Reported 2021-01-15 13:56:05 PST
(REGRESSION) Playback pauses upon entering PiP via media controls on trailers.apple.com
Attachments
Patch (4.10 KB, patch)
2021-01-15 14:08 PST, Peng Liu
no flags
Peng Liu
Comment 1 2021-01-15 14:08:55 PST
Peng Liu
Comment 2 2021-01-15 14:09:30 PST
EWS
Comment 3 2021-01-15 15:47:18 PST
Committed r271542: <https://trac.webkit.org/changeset/271542> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417736 [details].
Note You need to log in before you can comment on or make changes to this bug.